# Sound-and-Tempo-Classification

./: README.md  pyproject.toml
config/: config.speed.yaml  config.tempo.yaml
models/: model.speed.joblib
src/: download_data.py  evaluate.py  train_speed.py  train_tempo.py  utils.py
