[project]
name = "sound-and-tempo-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gdown>=5.2.1",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]
